--- a/index.html
+++ b/index.html
@@ -374,7 +374,39 @@
             <span class="dot" data-slide="4">5</span>
         </div>
     </div>
-  
+
+<!-- SIGN-UP FORM START -->
+<div id="signup-form">
+    <h2>Sign-Up Form</h2>
+    <form action="save_signup.php" method="POST">
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name" required>
+
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" name="last_name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="gender">Gender:</label>
+        <select id="gender" name="gender" required>
+            <option value="">Select</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Other">Other</option>
+        </select>
+
+        <label for="interests">Interests (comma separated):</label>
+        <input type="text" id="interests" name="interests" placeholder="e.g. AI, Web, Gaming">
+
+        <button type="submit">Sign Up</button>
+    </form>
+</div>
+<!-- SIGN-UP FORM END -->
+                                
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
