--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ubaid Shoes Store - Slideshow</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
+ /*  <style>
         * {
             margin: 0;
             padding: 0;
@@ -245,6 +245,7 @@
             .gugu {color:black;}
             .puppoo {font-size:120px;}
     </style>
+    */
 </head>
 <body>
     <div class="container">
