--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
    <div>
-  <a href="signin.html"><button>Sign In</button></a> 
+  <a href="signin.html"><button class="sign-in-btn">Sign In</button>
+</a> 
      </div>  
   <div class="container">
         <h1>الجدید سویٹس</h1>
